--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "@inertiajs/inertia": "^0.11.1",
         "@popperjs/core": "^2.11.8",
-        "mini-svg-data-uri": "^1.4.4"
+        "mini-svg-data-uri": "^1.4.4",
+        "sweetalert2": "^11.15.3"
     }
 }
